// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       expense 
      totalling
       
      <span>
        $2.35
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render Expenses summary with two expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       expenses 
      totalling
       
      <span>
        $6.52
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
